--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -755,6 +755,13 @@
     <string name="fling_lavalamp_color_to">Lava Lamp end color</string>
     <string name="pulse_colors_reset_title">Reset pulse colors</string>
     <string name="pulse_colors_reset_message">Are you sure you want to reset these colors to default?</string>
+    <string name="pulse_blacklist_title">Apps blacklist</string>
+    <string name="pulse_blacklist_summary">Apps to be skipped for Pulse</string>
+    <string name="pulse_blacklist_apps_cat_title">Blacklist</string>
+    <string name="pulse_blacklist_apps_title">Apps blacklist</string>
+    <string name="pulse_blacklist_apps_summary">Apps to not show in the panel</string>
+    <string name="pulse_blacklist_add_apps_title">Add app</string>
+    <string name="pulse_blacklist_add_apps_summary">Tap here to add, tap on added app to remove it</string>
 
      <!-- Pulse config -->
     <string name="pulse_custom_dimen">Bar width</string>
