--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -747,6 +747,7 @@
     <string name="pulse_solid_units_count">Solid lines count</string>
     <string name="pulse_solid_lines_count">Solid lines count</string>
     <string name="pulse_solid_units_opacity">Solid lines opacity</string>
+    <string name="pulse_fading_blocks_opacity">Fading blocks opacity</string>
     <string name="pulse_solid_dimen_category">Solid lines mode settings</string>
     <string name="pulse_custom_buttons_opacity_title">Smartbar buttons opacity on Pulse</string>
     <string name="pulse_auto_color_title">Automatic Pulse color</string>
@@ -762,6 +763,7 @@
     <string name="pulse_blacklist_apps_summary">Apps to not show in the panel</string>
     <string name="pulse_blacklist_add_apps_title">Add app</string>
     <string name="pulse_blacklist_add_apps_summary">Tap here to add, tap on added app to remove it</string>
+    <string name="nav_media_cat">Media</string>
 
      <!-- Pulse config -->
     <string name="pulse_custom_dimen">Bar width</string>
