--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -661,7 +661,10 @@
     <!-- QS tile styles -->
     <string name="qs_tile_style_title">QS Tile Style</string>
     <string name="qstile_default">Default</string>
+    <string name="qstile_circle_gradient">Circle (Gradient)</string>
     <string name="qstile_circle_trim">Circle (Trim)</string>
+    <string name="qstile_dottedcircle">Dotted Circle</string>
+    <string name="qstile_circle_dualtone">Dual-Toned Circle</string>
     <string name="qstile_dual_tone_circle">Dual-Toned Circle (Trim)</string>
     <string name="qstile_oreo">Oreo</string>
     <string name="qstile_oreo_circle_trim">Oreo (Circle Trim)</string>
