--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -787,4 +787,9 @@
     <string name="volte_icon_title">VoLTE icon</string>
     <string name="volte_icon_summary">Display VoLTE icon</string>
 
+    <!-- Screen shot -->
+    <string name="screenshot_type_title">Screenshot type</string>
+    <string name="screenshot_type_fullscreen">Fullscreen screenshots</string>
+    <string name="screenshot_type_partial">Partial screenshots</string>
+
 </resources>
