Initial checkin for SmartNav navigation suite [4/4]
Change-Id: Icb0d303cf7981616ec528c1341ddbcbfd3d75504

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="bliss_reset_cancel">Cancel</string>
 
     <!-- Tabs Titles -->
+    <string name="navigationbar_settings_title">SmartNav</string>
     <string name="buttons_navbar_title">NavBar</string>
     <string name="buttons_power_title">Power</string>
     <string name="buttons_volume_title">Volume</string>
