--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -747,4 +747,9 @@
     <string name="screenshot_type_fullscreen">Fullscreen screenshots</string>
     <string name="screenshot_type_partial">Partial screenshots</string>
 
+    <!-- Rounded corners -->
+    <string name="corners_category">Corners</string> 
+    <string name="corner_radius">Rounded Corner Radius</string>
+    <string name="content_padding">Corner Content Padding</string>
+
 </resources>
