Allow to swap volume buttons rotation based [2/2]
Change-Id: I75f9f6c2c8197454365bb0efc9dbcb89689e1e25

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -773,4 +773,8 @@
     <string name="power_menu_animation_translucent_bottom">Translucent (bottom)</string>
     <string name="power_menu_animation_rotate">Rotate</string>
 
+    <!-- Volume swap buttons -->
+    <string name="swap_volume_buttons_title">Reorient</string>
+    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
+
 </resources>
