Volume dialog timeout (2/2)
Change-Id: Ia4929c42d5c6df019562ea2cf424c0ae416aae6c

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -777,4 +777,7 @@
     <string name="swap_volume_buttons_title">Reorient</string>
     <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
 
+    <!-- Volume dialog timeout -->
+    <string name="volume_dialog_timeout_title">Volume dialog timeout</string>
+
 </resources>
