--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="buttons_navbar_title">NavBar</string>
     <string name="buttons_power_title">Power</string>
     <string name="buttons_volume_title">Volume</string>
+    <string name="buttons_hwkeys_title">Hardware</string>
     <string name="interface_theme_title">Theme</string>
     <string name="interface_misc_title">Misc</string>
     <string name="interface_callopt_title">Call options</string>
@@ -82,8 +83,10 @@
 
     <!-- Tabs Summaries -->
     <string name="buttons_navbar_summary">Navigation bar options</string>
+    <string name="buttons_smartbar_summary">Highly customizable navigation bar options</string>
     <string name="buttons_power_summary">Power button options</string>
     <string name="buttons_volume_summary">Customizations to the volume button</string>
+    <string name="buttons_hwkeys_summary">Hardware keys customization</string>
     <string name="interface_misc_summary">Access to AppOps and aspect ratio hack for apps</string>
     <string name="interface_callopt_summary">Various calling options</string>
     <string name="interface_weather_summary">Systems weather options</string>
@@ -780,5 +783,21 @@
 
     <!-- Volume dialog timeout -->
     <string name="volume_dialog_timeout_title">Volume dialog timeout</string>
+
+    <!-- Hardware button navigation -->
+    <string name="hardware_keys_volume_keys_title">Volume rocker</string>
+    <string name="hardware_keys_home_key_title">Home button</string>
+    <string name="hardware_keys_menu_key_title">Menu button</string>
+    <string name="hardware_keys_assist_key_title">Search button</string>
+    <string name="hardware_keys_appswitch_key_title">Overview button</string>
+    <string name="hardware_keys_back_key_title">Back button</string>
+    <string name="hardware_keys_double_tap_summary">Set double tap action</string>
+    <string name="hardware_keys_single_tap_summary">Set single tap action</string>
+    <string name="hardware_keys_long_press_summary">Set long press action</string>
+    <string name="hardware_keys_single_tap_title">Single tap action</string>
+    <string name="hardware_keys_long_press_title">Long press action</string>
+    <string name="hardware_keys_double_tap_title">Double tap action</string>
+    <string name="hardware_keys_category">Navigation buttons</string>
+    <string name="hardware_keys_disable_title">Disable navigation buttons</string>
 
 </resources>
