--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -800,4 +800,8 @@
     <string name="hardware_keys_category">Navigation buttons</string>
     <string name="hardware_keys_disable_title">Disable navigation buttons</string>
 
+   <!-- Device extras -->
+    <string name="device_extras_title">Device extras</string>
+    <string name="device_extras_summary">Device specific tweaks</string>
+
 </resources>
