Blissify: Add Option to Enable/Disable ScreenShot & ScreenRecord Sortcut [2/2]
Change-Id: Id32e020fc1a19c5598bd36649505ead82bbdc749

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -804,4 +804,14 @@
     <string name="device_extras_title">Device extras</string>
     <string name="device_extras_summary">Device specific tweaks</string>
 
+   <!-- ScreenRecord Shortcut -->
+    <string name="screen_record_shortcut">Screenrecord Shortcut</string>
+    <string name="screen_record_shortcut_on">Power + Volume Up triggers Screenrecord</string>
+    <string name="screen_record_shortcut_off">Power + Volume Up does nothing</string>
+
+   <!-- ScreenShot Shortcut -->
+    <string name="screen_shot_shortcut">Screenshot Shortcut</string>
+    <string name="screen_shot_shortcut_on">Power + Volume Down triggers screenshot</string>
+    <string name="screen_shot_shortcut_off">Power + Volume Down does nothing</string>
+
 </resources>
