--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -929,4 +929,19 @@
     <string name="power_menu_transparency">Power/reboot menu opacity</string>
     <string name="power_menu_dialog_dim">Power/reboot dialog dim background amount</string>
 
+    <!-- App circle bar -->
+    <string name="app_circle_bar_title">App Circle Bar</string>
+    <string name="app_circle_bar_summary">Show a selectable circle of apps to launch</string>
+    <string name="app_circle_bar_enable_title">Enable app circle bar</string>
+    <string name="app_circle_bar_enable_summary">Show circle app launcher after touching right side of screen</string>
+    <string name="app_circle_bar_included_apps_title">Included apps</string>
+    <string name="app_circle_bar_included_apps_summary">Apps that will show in app circle bar</string>
+    <string name="trigger_category">Trigger region</string>
+    <string name="trigger_width_title">Trigger width</string>
+    <string name="trigger_width_summary">Adjust the width of the trigger area</string>
+    <string name="trigger_top_title">Trigger position</string>
+    <string name="trigger_top_summary">Adjust the vertical postion of the trigger area</string>
+    <string name="trigger_bottom_title">Trigger height</string>
+    <string name="trigger_bottom_summary">Adjust the height of the trigger area</string>
+
 </resources>
