--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1081,4 +1081,13 @@
     <!-- Enable keys backlight-->
     <string name="button_brightness_sw_title">Enable backlight</string>
 
+    <!-- Audio Panel view  -->
+    <string name="audio_panel_view">Audio panel</string>
+    <string name="audio_panel_view_media_title">Media</string>
+    <string name="audio_panel_view_ringer_title">Ring</string>
+    <string name="audio_panel_view_notification_title">Notification</string>
+    <string name="audio_panel_view_alarm_title">Alarm</string>
+    <string name="audio_panel_view_voice_title">Voice</string>
+    <string name="audio_panel_view_bt_sco_title">Bluetooth</string>
+
 </resources>
