--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -675,6 +675,8 @@
     <string name="qstile_oreo_circle_trim">Oreo (Circle Trim)</string>
     <string name="qstile_oreo_squircle_trim">Oreo (Squircle Trim)</string>
     <string name="qstile_squircle_trim">Squircle (Trim)</string>
+    <string name="qstile_squaremedo">The Squaremedo</string>
+    <string name="qstile_inkdrop">Ink</string>
 
     <!-- Statusbar ticker -->
     <string name="statusbar_icons_cat">Icons</string>
