Add in new clocks
- Spidey Clock
- Analog with numbers
- Also changed DU clock to deadpool
- Small digital
- Sammy accent clocks
- Digital with accent color
- My other clocks

Change-Id: I2d6fd5f59e88853c8b6d650d79023f1e89000db3

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1114,10 +1114,21 @@
     <!-- Lockscreen clock styles -->
     <string name="lockscreen_clock_selection_title">Clock style</string>
     <string name="lockscreen_clock_selection_digital">Default</string>
-    <string name="lockscreen_clock_selection_digital_bold">Digital (bold)</string>
-    <string name="lockscreen_clock_selection_analog">Analog</string>
-    <string name="lockscreen_clock_selection_du">Analog (du)</string>
+    <string name="lockscreen_clock_selection_digital_bold">Bold (digital)</string>
+    <string name="lockscreen_clock_selection_digital_small">Small (digital)</string>
+    <string name="lockscreen_clock_selection_digital_accent">Full accent (digital)</string>
+    <string name="lockscreen_clock_selection_digital_accent_min">Accent minutes (digital)</string>
+    <string name="lockscreen_clock_selection_digital_accent_hour">Accent hours (digital)</string>
+    <string name="lockscreen_clock_selection_analog">Deep night (analog)</string>
+    <string name="lockscreen_clock_selection_analog_num">Bright white (analog)</string>
+    <string name="lockscreen_clock_selection_deadpool">Deadpool (analog)</string>
+    <string name="lockscreen_clock_selection_spidey">Spidey (analog)</string>
+    <string name="lockscreen_clock_selection_dot">DotOS (analog)</string>
+    <string name="lockscreen_clock_selection_spectrum">Spectrum (analog)</string>
+    <string name="lockscreen_clock_selection_sneeky">Sneeky (analog)</string>
     <string name="lockscreen_clock_selection_sammy">Sammy</string>
     <string name="lockscreen_clock_selection_sammy_bold">Sammy (bold)</string>
+    <string name="lockscreen_clock_selection_sammy_accent">Sammy accent</string>
+    <string name="lockscreen_clock_selection_sammy_accent_alt">Sammy accent(darker hour)</string>
 
 </resources>
