Fingerprint authentication vibration [2/2]
Change-Id: I9255cb0c82683d8fe8033a2402a4ebaaf851858d

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1140,5 +1140,9 @@
     <string name="force_ambient_for_media_title">Music ticker</string>
     <string name="force_ambient_for_media_summary">Display the playing music track info within Ambient display</string>
 
+    <!-- Fingerprint authentication vibration -->
+    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
+    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
+
 
 </resources>
