Allow hiding lockscreen shortcuts on secure lockscreen [2/2]
Change-Id: If42c2ae447660762a2aba9587366e8b6b759ea39

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1147,5 +1147,9 @@
     <string name="face_auto_unlock_title">Face auto unlock</string>
     <string name="face_auto_unlock_summary">Dismiss lockscreen after face unlocking</string>
 
+    <!-- Hide Lockscreen shortcuts on secure Lockscreen --> 
+    <string name="lockscreen_hide_shortcuts_title">Hide Bottom Shortcuts</string> 
+    <string name="lockscreen_hide_shortcuts_summary">Hide Left-Right Shortcuts on secure lock screens</string> 
+
 
 </resources>
