--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1149,7 +1149,10 @@
 
     <!-- Hide Lockscreen shortcuts on secure Lockscreen --> 
     <string name="lockscreen_hide_shortcuts_title">Hide Bottom Shortcuts</string> 
-    <string name="lockscreen_hide_shortcuts_summary">Hide Left-Right Shortcuts on secure lock screens</string> 
+    <string name="lockscreen_hide_shortcuts_summary">Hide Left-Right Shortcuts on secure lock screens</string>
 
+    <!-- Fingerprint unlock keystore -->  
+    <string name="fp_unlock_keystore_title">Fingerprint unlock</string>  
+    <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot without PIN/Password/Pattern\nNote: at your own risk!</string>
 
 </resources>
