--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -135,6 +135,7 @@
     <string name="battery_style_square">Square</string>
     <string name="battery_style_dotted_square">Dotted square</string>
     <string name="battery_style_text">Text</string>
+    <string name="battery_style_hidden">Hidden</string>
     <string name="show_battery_percent_title">Show percentage</string>
     <string name="battery_percent_none">Don\'t show</string>
     <string name="battery_percent_outside">Show near icon</string>
