Add ability to toggle bluetooth battery level [2/2]
Change-Id: Ibb97c552f8ac1d24f7de0919a7a658601169d45a

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1156,4 +1156,8 @@
     <string name="fp_unlock_keystore_title">Fingerprint unlock</string>  
     <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot without PIN/Password/Pattern\nNote: at your own risk!</string>
 
+    <!-- Bluetooth battery status -->
+    <string name="bluetooth_battery_title">Bluetooth battery status</string>
+    <string name="bluetooth_battery_summary">Display battery status for the connected bluetooth device, if available</string>
+
 </resources>
