--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1160,4 +1160,11 @@
     <string name="bluetooth_battery_title">Bluetooth battery status</string>
     <string name="bluetooth_battery_summary">Display battery status for the connected bluetooth device, if available</string>
 
+    <!-- Ambient display bottom info -->
+    <string name="ambient_display_bottom_info_title">Ambient Display bottom view</string>
+    <string name="ambient_display_bottom_info_summary">Enable to show information on the bottom while dozing</string>
+    <string name="ambient_display_bottom_info_off">Disabled</string>
+    <string name="ambient_display_bottom_info_battery">Battery percent</string>
+    <string name="ambient_display_bottom_info_weather">Brief weather info</string>
+
 </resources>
