Change shortcut to new Privacy Guard
Change-Id: Iad0e1ecb5b5f256ce577061ad5a14b4cb0fc84e2

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1167,4 +1167,8 @@
     <string name="ambient_display_bottom_info_battery">Battery percent</string>
     <string name="ambient_display_bottom_info_weather">Brief weather info</string>
 
+    <!-- Privacy guard -->
+    <string name="privacy_guard_settings_title">Privacy guard</string>
+    <string name="privacy_guard_settings_summary">In depth control over application permissions</string>
+
 </resources>
