--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1171,4 +1171,8 @@
     <string name="privacy_guard_settings_title">Privacy guard</string>
     <string name="privacy_guard_settings_summary">In depth control over application permissions</string>
 
+    <!-- Drag handle -->
+    <string name="tuner_show_drag_handle_title">Drag handle</string>
+    <string name="tuner_show_drag_handle_summary">Shows a drag handle at the bottom of QS</string>
+
 </resources>
