--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1204,6 +1204,8 @@
     <string name="active_edge_sensitivity_title">Squeeze sensitivity</string>
     <string name="active_edge_wake_title">Allow when screen is off</string>
     <string name="active_edge_wake_summary">Trigger any action even when the screen is off</string>
+    <string name="active_edge_app_select_title">Select app</string>
+    <string name="active_edge_app_select_summary">Select an app to launch with the squeeze action</string>
     <string name="active_edge_footer_info">Not all squeeze actions within Active Edge have the capability to activate the display</string>
     <string name="action_nothing">No action</string>
     <string name="action_menu">Menu</string>
@@ -1221,5 +1223,6 @@
     <string name="action_power_menu">Power menu</string>
     <string name="action_screenshot">Screenshot</string>
     <string name="action_qs_panel">QS panel</string>
+    <string name="action_app_action">Application</string>
 
 </resources>
