--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1229,5 +1229,6 @@
     <string name="action_lastapp_action">Last app</string>
     <string name="action_medianext_action">Media next</string>
     <string name="action_mediaplay_action">Media Play/Pause</string>
+    <string name="action_ringer_modes">Ringer modes</string>
 
 </resources>
