Revert "Add in 5 more actions for Active Edge"
This reverts commit 3f4c5cbfa2aab6d2fc6f6301d86f709275b3a1a4.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1199,7 +1199,7 @@
 
     <!-- Active edge -->
     <string name="active_edge_title">Active Edge</string>
-    <string name="active_edge_summary">Configure Active Edge options, does not yet work with Smartbar or Fling</string>
+    <string name="active_edge_summary">Configure Active Edge options</string>
     <string name="active_edge_actions_title">Squeeze action</string>
     <string name="active_edge_sensitivity_title">Squeeze sensitivity</string>
     <string name="active_edge_wake_title">Allow when screen is off</string>
@@ -1222,12 +1222,7 @@
     <string name="action_notifications">Notifications</string>
     <string name="action_power_menu">Power menu</string>
     <string name="action_screenshot">Screenshot</string>
-    <string name="action_screenrecord">Screenrecord</string>
     <string name="action_qs_panel">QS panel</string>
     <string name="action_app_action">Application</string>
-    <string name="action_splitscreen_action">Split screen</string>
-    <string name="action_lastapp_action">Last app</string>
-    <string name="action_medianext_action">Media next</string>
-    <string name="action_mediaplay_action">Media Play/Pause</string>
 
 </resources>
