--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -478,9 +478,11 @@
     <string name="omniswitch_title">Recents style</string>
 
     <!-- AOSP Recents component Style -->
-    <string name="recents_component_type_title">Stock Recents Style</string>
-    <string name="recents_pie">Pie</string>
-    <string name="recents_oreo">Oreo</string>
+    <string name="recents_component_type_title">Recents Style</string>
+    <string name="recents_quickstep">Quickstep</string>
+    <string name="recents_stock">Stock</string>
+    <string name="recents_grid">Grid</string>
+    <string name="recents_go">Android Go</string>
 
     <string name="aspect_ratio_apps_enabled_title">Enable scaling</string>
     <string name="aspect_ratio_apps_enabled_summary">Allow legacy apps to use full screen</string>
