--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -674,6 +674,7 @@
     <string name="qs_tile_style_title">QS Tile Style</string>
     <string name="qstile_default">Default</string>
     <string name="qstile_circle_gradient">Circle (Gradient)</string>
+    <string name="qstile_circleoutline">Circle (Outline)</string>
     <string name="qstile_circle_trim">Circle (Trim)</string>
     <string name="qstile_cookie">Cookie</string>
     <string name="qstile_dottedcircle">Dotted Circle</string>
