Lockscreen Visualizer: Add pulse magic [2/2]
Change-Id: Ib6a06c570c3273f6360c982265f33d2ae0f51a04

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -80,6 +80,7 @@
 
     <string name="unit_x1000ms">x1000 ms</string>
     <string name="unit_percent">\u0025</string>
+    <string name="unit_milliseconds">milliseconds</string>
     <string name="default_string">Default</string>
     <string name="reset">Reset</string>
 
@@ -339,12 +340,18 @@
     <string name="lockscreen_weather_show_temp_summary">Show current city temperature on right of image</string>
 
     <!-- Lockscreen visualizer -->
+    <string name="music_visualizer_title">Music visualizer</string>
+    <string name="music_visualizer_summary">Display music visualizer when available</string>
     <string name="lockscreen_visualizer_category">Visualizer</string>
     <string name="lockscreen_visualizer_enable">Enable lockscreen visualizer</string>
     <string name="lockscreen_visualizer_enable_summary">Show visualizer on lockscreen when music is playing</string>
-    <string name="lockscreen_visualizer_enable_custom">Use custom color</string>
-    <string name="lockscreen_visualizer_enable_custom_summary">Use a preset color instead of the generated color</string>
-    <string name="lockscreen_visualizer_custom_color">Visualizer Color</string>
+    <string name="lockscreen_autocolor_title">Automatic color</string>
+    <string name="lockscreen_autocolor_summary">Sync color with album art</string>
+    <string name="lockscreen_autocolor_mediametadata">Requires media cover art on lockscreen enabled</string>
+    <string name="lockscreen_autocolor_lavalamp">Requires lava lamp disabled</string>
+    <string name="lockscreen_lavalamp_title">Lava lamp</string>
+    <string name="lockscreen_lavalamp_summary">Animate smooth lava lamp style color blend</string>
+    <string name="lockscreen_lavalamp_speed_title">Lava lamp color blend interval</string>
 
     <!-- Lockscreen battery info indicator  -->
     <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
