Blissify: custom fingerprint icon [2/2]
Change-Id: I5294516c9ea99e65520861454ec8d5bd0b5f1fb4

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1272,4 +1272,8 @@
     <string name="accent_picker_material_colors">Material palette</string>
     <string name="accent_picker_custom_colors">User requested</string>
 
+    <!-- Fingerprint -->
+    <string name="fingerprint_settings_title">Fingerprint</string>
+    <string name="fingerprint_category_custom_icon">Custom icon</string>
+
 </resources>
