Settings: Add toggle to disable charging animation [2/2]
Change-Id: I7d6059082ebb1b48d760da3dae7c95e827870f97

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1276,4 +1276,8 @@
     <string name="fingerprint_settings_title">Fingerprint</string>
     <string name="fingerprint_category_custom_icon">Custom icon</string>
 
+    <!-- Charging animation -->
+    <string name="charging_animation_title">Charging animation</string>
+    <string name="charging_animation_summary">Display an animation when the device is plugged in</string>
+
 </resources>
