Port: Wake on plug (2/2)
Change-Id: Ibacaefe296a4c1af4c2db1b6e87652fcd86d20f6

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1280,4 +1280,8 @@
     <string name="charging_animation_title">Charging animation</string>
     <string name="charging_animation_summary">Display an animation when the device is plugged in</string>
 
+    <!-- Wakeup options -->
+    <string name="wakeup_when_plugged_unplugged_title">Wake up on charge</string>
+    <string name="wakeup_when_plugged_unplugged_summary">Wake up device if charger is plugged/unplugged.</string>
+
 </resources>
