Blissify: Add Q text lockscreen clock style
Change-Id: I83be712438e23deb362c9046f129ea00b0c50fa8

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1157,6 +1157,7 @@
     <string name="lockscreen_clock_selection_sammy_bold">Sammy (bold)</string>
     <string name="lockscreen_clock_selection_sammy_accent">Sammy accent</string>
     <string name="lockscreen_clock_selection_sammy_accent_alt">Sammy accent(darker hour)</string>
+    <string name="lockscreen_clock_selection_text">Android Q Text</string>
 
     <string name="volume_rocker_music_controls_title">Playback control</string>
     <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
