--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1285,4 +1285,8 @@
     <string name="wakeup_when_plugged_unplugged_title">Wake up on charge</string>
     <string name="wakeup_when_plugged_unplugged_summary">Wake up device if charger is plugged/unplugged.</string>
 
+    <!-- Charging animation -->
+    <string name="lockscreen_charging_animation_title">Charging animation</string>
+    <string name="lockscreen_charging_animation_summary">Display a bolt animation when the device is charging</string>
+
 </resources>
