VIbrate on Plug [2/2]
Change-Id: I41c1d1447ec7fa87a092f45b7a47776739e004db

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1284,6 +1284,8 @@
     <!-- Wakeup options -->
     <string name="wakeup_when_plugged_unplugged_title">Wake up on charge</string>
     <string name="wakeup_when_plugged_unplugged_summary">Wake up device if charger is plugged/unplugged.</string>
+    <!-- Vibrate on plug -->
+    <string name="vibration_on_charge_state_changed_title">Vibrate on USB plug</string>
 
     <!-- Charging animation -->
     <string name="lockscreen_charging_animation_title">Charging animation</string>
