Fix Legacy Scaling apps option
- Adopted the way headsup stoplist and black list usage

Change-Id: I482b85b73ea142d570c0b38cb130840657f9747c

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -497,8 +497,8 @@
 
     <string name="aspect_ratio_apps_enabled_title">Enable scaling</string>
     <string name="aspect_ratio_apps_enabled_summary">Allow legacy apps to use full screen</string>
-    <string name="aspect_ratio_apps_list_summary"></string>
-    <string name="aspect_ratio_apps_list_title">Apps allowed to use scaling</string>
+    <string name="aspect_ratio_apps_list_summary">Apps allowed to use scaling</string>
+    <string name="aspect_ratio_apps_list_title">Add app</string>
     <string name="aspect_ratio_category_title">Legacy app scaling</string>
     <string name="aspect_ratio_apps_info">Applications need to be restarted after changes</string>
     <string name="action_save">Save</string>
