Make the lockscreen date format changeable outside of date style
- Also remove the 2 options that only had a format difference

Change-Id: I91b4e079a85ba586db15d7972399dd44d89907e3

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1298,9 +1298,7 @@
     <string name="lockscreen_date_selection_str_round">Semi-transparent box (round)</string>
     <string name="lockscreen_date_selection_qbeta_style">Q Beta pill</string>
     <string name="lockscreen_date_selection_str_accent">Rounded, simple and with accent</string>
-    <string name="lockscreen_date_selection_str_accent_day">Rounded, simple and with accent (alt)</string>
     <string name="lockscreen_date_selection_str_accent_transparent">Rounded, transparent and with accent</string>
-    <string name="lockscreen_date_selection_str_accent_transparent_day">Rounded, transparent and with accent (alt)</string>
     <string name="lockscreen_date_selection_str_gradient">Gradient</string>
     <string name="lockscreen_date_selection_str_border_accent">Dark with accented borders</string>
     <string name="lockscreen_date_selection_str_border_gradient">Dark with gradient borders</string>
@@ -1310,5 +1308,11 @@
     <string name="lockscreen_date_selection_outline_round_black">Black outline (Round)</string>
     <string name="lockscreen_date_selection_outline_box_accent">Accent based outline</string> 
     <string name="lockscreen_date_selection_outline_round_accent">Accent based (Round)</string>
+
+    <string name="lockscreen_date_format_title">Date format</string>
+    <string name="lockscreen_date_format_default">Default</string>
+    <string name="lockscreen_date_format_date_wnumber">Day with number</string>
+    <string name="lockscreen_date_format_date">Day</string>
+    <string name="lockscreen_date_format_day_of_month">Month with number</string>
 
 </resources>
