Blissify: Add 2 more date styles [2/2]
Change-Id: I61ec996b6ebfca23102c6ddee0a858e73ae4e848

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1308,6 +1308,8 @@
     <string name="lockscreen_date_selection_outline_round_black">Black outline (Round)</string>
     <string name="lockscreen_date_selection_outline_box_accent">Accent based outline</string> 
     <string name="lockscreen_date_selection_outline_round_accent">Accent based (Round)</string>
+    <string name="lockscreen_date_selection_str_half_gradient">Gradient (Transparent ending)</string>
+    <string name="lockscreen_date_selection_str_half_accent">Accent (Transparent ending)</string>
 
     <string name="lockscreen_date_format_title">Date format</string>
     <string name="lockscreen_date_format_default">Default</string>
