--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -135,6 +135,7 @@
     <string name="battery_style_solid_circle">Solid circle</string>
     <string name="battery_style_big_circle">Big circle</string>
     <string name="battery_style_big_dotted_circle">Big dotted circle</string>
+    <string name="status_bar_battery_style_pa_circle">Circle (Filled)</string>
     <string name="battery_style_square">Square</string>
     <string name="battery_style_dotted_square">Dotted square</string>
     <string name="battery_style_text">Text</string>
