--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1318,4 +1318,23 @@
     <string name="lockscreen_date_format_date">Day</string>
     <string name="lockscreen_date_format_day_of_month">Month with number</string>
 
+    <item type="string" name="lockdate_opt_1">dd/MM/yy</item>
+    <item type="string" name="lockdate_opt_2">MM/dd/yy</item>
+    <item type="string" name="lockdate_opt_3">yyyy-MM-dd</item>
+    <item type="string" name="lockdate_opt_4">yyyy-dd-MM</item>
+    <item type="string" name="lockdate_opt_5">dd-MM-yyyy</item>
+    <item type="string" name="lockdate_opt_6">MM-dd-yyyy</item>
+    <item type="string" name="lockdate_opt_7">MMM dd</item>
+    <item type="string" name="lockdate_opt_8">MMM dd, yyyy</item>
+    <item type="string" name="lockdate_opt_9">MMMM dd, yyyy</item>
+    <item type="string" name="lockdate_opt_10">EEE</item>
+    <item type="string" name="lockdate_opt_11">EEE dd</item>
+    <item type="string" name="lockdate_opt_12">EEE dd/MM</item>
+    <item type="string" name="lockdate_opt_13">EEE MM/dd</item>
+    <item type="string" name="lockdate_opt_14">EEE dd MMM</item>
+    <item type="string" name="lockdate_opt_15">EEE MMM dd</item>
+    <item type="string" name="lockdate_opt_16">EEE MMMM dd</item>
+    <item type="string" name="lockdate_opt_17">EEEE dd/MM</item>
+    <item type="string" name="lockdate_opt_18">EEEE MM/dd</item>
+
 </resources>
