Blissify: Add Animation Category
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,6 +22,7 @@
 
     <!-- Categories -->
     <string name="blissify_statusbar_title">StatusBar</string>
-
+    <string name="blissify_animation_title">Animations</string>
+    
 </resources>
 
