--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -81,6 +81,7 @@
     <string name="unit_x1000ms">x1000 ms</string>
     <string name="unit_percent">\u0025</string>
     <string name="unit_milliseconds">milliseconds</string>
+    <string name="unit_px">px</string>
     <string name="default_string">Default</string>
     <string name="reset">Reset</string>
 
@@ -375,6 +376,8 @@
     <string name="use_bottom_gesture_summary">Use bottom swipe up gestures for navigation\nNavigation bar must be disabled!</string>
     <string name="gesture_swipe_length_title">Swipe trigger height</string>
     <string name="gesture_swipe_length_summary">Heigth from bottom to trigger swipe</string>
+    <string name="gesture_swipe_start_title">Swipe trigger start height</string>
+    <string name="gesture_swipe_start_summary">Minimum height from bottom to start triggering gesture</string>
     <string name="gesture_action_timeout_title">Swipe trigger timeout</string>
     <string name="gesture_action_timeout_summary">Timeout before the gesture action is started</string>
     <string name="bottom_gestures_feedback_duration_title">Haptic feedback duration</string>
